Fixing viewport issue on SVG to avoid cutting off content on the right, changing min width

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ D3 charts
 svg {
 	height: 100%;
 	min-height: 300px;
-	min-width: 800px;
+	min-width: 600px;
+	width: 100%;
 }
 
 path {
